opam-version: "2.0"
synopsis: "Studying some Taekwondo poomsae"
description: "Studying some Taekwondo poomsae"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/poomsae"
doc: "https://github.com/mbarbin/poomsae"
bug-reports: "https://github.com/mbarbin/poomsae/issues"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.11"}
  "core" {>= "v0.15"}
  "core_unix" {>= "v0.15"}
  "ppx_jane" {>= "v0.15"}
  "textutils" {>= "v0.15"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/poomsae.git"
