opam-version: "2.0"
synopsis: "Studying some Taekwondo poomse"
description: "Studying some Taekwondo poomse"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/poomse"
doc: "https://github.com/mbarbin/poomse"
bug-reports: "https://github.com/mbarbin/poomse/issues"
depends: [
  "ocaml" {>= "4.13"}
  "dune" {>= "2.0.0"}
  "core" {>= "v0.15"}
  "core_unix" {>= "v0.15"}
  "ppx_jane" {>= "v0.15"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/poomse.git"